# pyglet-pen

./: LICENSE.txt  README.md  pyproject.toml
src/: Testing.ipynb  test_all_shapes.py  test_button.py  test_element_rect.py  test_float.py  test_grid.py  test_load_font.py  test_materials_font.py  test_stack.py  test_text.py  test_textlayout.py
src/pyglet_pen/: __about__.py  __init__.py  component.py  icons.py  interactable.py  ui_element.py  view.py  window.py
src/pyglet_pen/elements/: element.py  shapes.py  text.py
src/pyglet_pen/elements_old/: element.py  shapes.py
src/pyglet_pen/example/: common.py  main.py  style.py
src/pyglet_pen/example/views/: __init__.py  buttons.py  floating_layout.py  grid_layout.py  layouts.py  menu.py  stack_layout.py
src/pyglet_pen/layout/: floating.py  grid.py  layout.py  stack.py
src/pyglet_pen/layouts/: __init__.py  floating.py  grid.py  layout.py  stack.py
src/pyglet_pen/proxies/: proxy.py  shapes.py  text.py
src/pyglet_pen/renderables/: shapes.py  text.py
src/pyglet_pen/utilities/: attribute_subscriber.py  classproperty.py  named_attribute.py  named_descriptor.py  named_descriptor2.py  subscribe_properties.py  types.py
src/pyglet_pen/widgets/: button.py  widget.py
tests/: __init__.py  test_attribute_subscriber.py  test_named_attribute.py
